Closed Bug 417566 Opened 18 years ago Closed 18 years ago

protect against Obj-C exceptions in "toolkit" top-level directory

Categories

(Core :: General, defect, P1)

x86
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla1.9beta4

People

(Reporter: jaas, Assigned: bent.mozilla)

References

()

Details

Attachments

(1 file)

For implementing the strategy we decided on in bug 163260 we are filing a bug for each top-level directory that needs work. mozilla/toolkit
I'm on this.
Assignee: joshmoz → bent.mozilla
Flags: blocking1.9+
Priority: -- → P1
Target Milestone: --- → mozilla1.9beta4
Attached patch Patch, v1Splinter Review
Attachment #304364 - Flags: review?(joshmoz)
Attachment #304364 - Flags: superreview?(roc)
Attachment #304364 - Flags: review?(joshmoz)
Attachment #304364 - Flags: review+
Attachment #304364 - Flags: superreview?(roc) → superreview+
Fixed.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: