Bug 417566 - 'protect against Obj-C exceptions in "toolkit" top-level directory'. r=josh, sr=roc, a=blocking1.9+.