toolkit/components/alerts/src/mac/nsNotificationsList.mm
@@ -36,6 +36,7 @@
  * ***** END LICENSE BLOCK ***** */
 
 #include "nsNotificationsList.h"
+#include "nsObjCExceptions.h"
 #include "nsStringAPI.h"
 
 NS_IMPL_ADDREF(nsNotificationsList)
@@ -48,19 +49,29 @@ NS_INTERFACE_MAP_END
 
 nsNotificationsList::nsNotificationsList()
 {
+  NS_OBJC_BEGIN_TRY_ABORT_BLOCK;
+
   mNames   = [[NSMutableArray alloc] init];
   mEnabled = [[NSMutableArray alloc] init];
+
+  NS_OBJC_END_TRY_ABORT_BLOCK;
 }
 
 nsNotificationsList::~nsNotificationsList()
 {
+  NS_OBJC_BEGIN_TRY_ABORT_BLOCK;
+
   [mNames release];
   [mEnabled release];
+
+  NS_OBJC_END_TRY_ABORT_BLOCK;
 }
 
 NS_IMETHODIMP
 nsNotificationsList::AddNotification(const nsAString &aName, PRBool aEnabled)
 {
+  NS_OBJC_BEGIN_TRY_ABORT_BLOCK_NSRESULT;
+
   NSString *name = [NSString stringWithCharacters: aName.BeginReading()
                                            length: aName.Length()];
 
@@ -70,22 +81,32 @@ nsNotificationsList::AddNotification(const nsAString &aName, PRBool aEnabled)
     [mEnabled addObject: name];
 
   return NS_OK;
+
+  NS_OBJC_END_TRY_ABORT_BLOCK_NSRESULT;
 }
 
 NS_IMETHODIMP
 nsNotificationsList::IsNotification(const nsAString &aName, PRBool *retVal)
 {
+  NS_OBJC_BEGIN_TRY_ABORT_BLOCK_NSRESULT;
+
   NSString *name = [NSString stringWithCharacters: aName.BeginReading()
                                            length: aName.Length()];
 
   *retVal = [mNames containsObject: name] ? PR_TRUE : PR_FALSE;
   return NS_OK;
+
+  NS_OBJC_END_TRY_ABORT_BLOCK_NSRESULT;
 }
 
 void
 nsNotificationsList::informController(mozGrowlDelegate *aController)
 {
+  NS_OBJC_BEGIN_TRY_ABORT_BLOCK;
+
   [aController addNotificationNames: mNames];
   [aController addEnabledNotifications: mEnabled];
+
+  NS_OBJC_END_TRY_ABORT_BLOCK;
 }
 
